[tool.poetry]
name = "keep2roam"
version = "0.1.0"
description = "Convert Google Keep Takeout Files to Roam Daily Notes Pages"
authors = ["Adithya Balaji <adithyabsk@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/adithyabsk/keep2roam"
repository = "https://github.com/adithyabsk/keep2roam"

[tool.poetry.dependencies]
python = "^3.7"
marshmallow = "^3.9.0"
click = "^7.1.2"
importlib-metadata = { version = "^2.0.0", python = "<3.8" }

[tool.poetry.dev-dependencies]
flake8 = "3.8.4"
black = "20.8b1"
mypy = "0.790"
isort = {version = "5.6.4", extras = ["toml"]}

[tool.poetry.scripts]
k2r = "keep2roam:k2r"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''

[tool.isort]
known_first_party = 'keep2roam'
known_third_party = []
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
