[tool.poetry]
name = "keep2roam"
version = "1.1"
description = "Convert Google Keep Takeout Files to Roam Daily Notes Pages"
authors = ["Adithya Balaji <adithyabsk@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/adithyabsk/keep2roam"
repository = "https://github.com/adithyabsk/keep2roam"

[tool.poetry.dependencies]
python = "^3.7"
marshmallow = "^3.9.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
flake8 = "3.8.4"
black = "20.8b1"
mypy = "0.790"
isort = {version = "5.6.4", extras = ["toml"]}
pytest = "^6.1.2"
coverage = {version = "^5.3", extras = ["toml"]}
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
k2r = "keep2roam:k2r"

# pytest
[tool.pytest.ini_options]
addopts = "-vv -x --doctest-modules --cov=keep2roam --cov-report=term --cov-report=html"
# for pycharm add --no-cov to the configuration to make covearge work

# Migrate to pyproject.toml after https://github.com/pytest-dev/pytest/issues/1556

[tool.coverage]
branch = true
source = "keep2roam"
omit = [
    "tests/*",
    "docs/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''

[tool.isort]
known_first_party = 'keep2roam'
known_third_party = []
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
