[metadata]
description-file = README.md

[darglint]
ignore_regex=^(cli|print_version|camelcase|suffix)$

[mypy]
strict = True
disallow_untyped_decorators = False
warn_unused_ignores = False

# flake8
[flake8]
# temporarily exclude tests folder
max-line-length = 88
exclude = .git,__pycache__,docs/*,build,dist,tests/*
ignore =
    W503 # Line break occurred after a binary operator (opposite of W504)
    D107 # Missing docstring in __init__
    D301 # Use r""" if any backslashes in a docstring
    D106 # Nested class docs (marshmallow)
max-complexity = 12

# Migrate to pyproject.toml when: https://gitlab.com/pycqa/flake8/issues/428
